render-wasm/src/render/svg/snapshots/render_wasm__render__svg__tests__exports_an_unclipped_frame_with_overflowing_child.snap
---
source: src/render/svg/tests.rs
assertion_line: 175
expression: svg
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="150" height="150">
	<rect fill="#F0F0F0" width="100" height="100"/>
	<rect fill="red" x="50" y="50" width="100" height="100"/>
</svg>
